--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,20 @@ h3 {
 
 body {
     background-color: #1f4690;
-}
-.park-site {
-    text-decoration: none;
-    color:rgb(80, 228, 228);
 
+}
+
+h6 {
+    text-align: center;
+    color: white;
+    font-family: 'ubuntu';
+    line-height: 2;
+    font-size: 1rem;
+    background-color: rgba(31, 70, 144, 0.1);
+    border-radius: 10px;
+    margin: 1% 1%;
+    padding: 15px;
+    overflow: auto;
 }
 
 
@@ -21,38 +30,42 @@ body {
     padding: 20px 20px;
     border-radius: 10px 10px 5px 5px;
 }
-#whyvisit{
+
+#whyvisit {
     text-align: center;
+    height: 650px;
     color: white;
     font-family: 'ubuntu';
-    font-size:1.3rem;
+    font-size: 1.3rem;
     background-color: rgba(65, 131, 218, 0.9);
     border-radius: 10px;
-    margin: 7% 20%;
-    padding:15px;
+    margin: 7% 4%;
+    padding: 15px;
+    overflow: auto;
 
 }
-#added-info{
+
+#added-info {
     text-align: center;
     color: white;
     font-family: 'ubuntu';
-    font-size:1.3rem;
+    font-size: 1.3rem;
     background-color: rgba(65, 131, 218, 0.9);
     border-radius: 10px;
-    margin: 7% 2%;
-    padding:15px;
-    height:500px;
-    overflow:scroll;
-    
+    margin: 2% 2%;
+    padding: 15px;
+    height: 800px;
+    overflow:auto;
+
 }
 
 #pricing {
     text-align: center;
     color: white;
     background-color: #1f4690;
-    margin:1% 3%;
-   
-    
+    margin: 1% 3%;
+
+
 }
 
 #cta {
@@ -71,19 +84,34 @@ body {
     padding: 5px;
 }
 
-.bodytext{
-    margin: 4% 2%;
-    padding: 20px 20px;
+.park-site {
+    text-decoration: none;
+    color: rgb(15, 255, 51);
+
+}
+
+.bodytext {
+    margin: 5% 2%;
+    padding: 20px 15px;
     font-family: 'ubuntu';
-    font-size:1.2rem;
-    line-height: 1.7;
+    font-size: 1.2rem;
+    line-height: 1.9;
+
+}
+
+.slider-text {
+    font-size: 1.8rem;
+}
+
+.slider-add {
+    font-size: 1.1rem;
 }
 
 .navbar-brand {
     font-family: "ubuntu";
     font-size: 2rem;
     font-weight: bold;
-    
+
 }
 
 .nav-style {
@@ -94,83 +122,174 @@ body {
 }
 
 .carousel-item {
-    height: 40rem;
+    height: 43rem;
     background-color: #0777c2;
 
 }
-.slide-1{
-    background: rgba(0, 0, 0, 0.3)url('../images/kellyrock.jpg') 50% 50% / 100% no-repeat fixed;
+
+.slide-1 {
+    background: rgba(0, 0, 0, 0.2)url('../images/kellyrock.jpg') 50% 50% / 100% no-repeat fixed;
     background-size: cover;
     background-blend-mode: darken;
-    
+
 }
 
-.slide-2{
-    background: rgba(0, 0, 0, 0.3)url('../images/rainbowsprings.jpg') 50% 50% / 100% no-repeat fixed;
-    background-size: cover;
-    background-blend-mode: darken;
-}
-
-.slide-3{
-    background: rgba(0, 0, 0, 0.5)url('../images/devilsden.jpg') 50% 50% / 100% no-repeat fixed;
+.slide-2 {
+    background: rgba(0, 0, 0, 0.2)url('../images/rainbowsprings.jpg') 50% 50% / 100% no-repeat fixed;
     background-size: cover;
     background-blend-mode: darken;
 }
 
-.aqua-txt{
-    font-size:3rem;
-    font-weight:bold;
+.slide-3 {
+    background: rgba(0, 0, 0, 0.4)url('../images/devilsden.jpg') 50% 50% / 100% no-repeat fixed;
+    background-size: cover;
+    background-blend-mode: darken;
+}
+
+.aqua-txt {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.aquifer-image {
+    height: 60%;
+    width: 40%;
+    border-radius: 10px;
+    margin-bottom:2%;
+    margin-top:1%;
+}
+
+.state-image{
+    height: 20%;
+    width: 75%;
+    margin:5%;
+    border-radius: 10px;
 }
 
 
 
 .icon {
     padding: 20px;
-    color:rgb(15, 219, 219);
+    color: rgb(15, 219, 219);
 }
-.springtxt{
-    color:white;
-    font-size:2rem;
-    font-weight:bold;
+
+.springtxt {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 
-.card-img{
+.card-img {
     width: 100%;
-    height: 13vw;
+    height: 15vw;
     object-fit: cover;
     border-radius: 5px;
 }
+
 .check-out {
     color: white;
     font-weight: bold;
     font-size: 2rem;
-    line-height:1.7;
+    line-height: 1.7;
 }
-.fun-image{
-    position:relative;
-    top:35px;
-    margin:2% 7%;
+
+.fun-image {
+    position: relative;
+    top: 35px;
+    margin: 2% auto;
     border-radius: 100%;
     transform: rotate(5deg);
 }
 
-@media ( max-width:480px){
-
-    .card-img{
-        
-        height:200px;
-        width:100%;
+@media (max-width:1200px) {
+    .aquifer-image {
+        height: 40%;
+        width: 50%;
+        margin: 10%;
     }
+    .state-image{
+        height: 20%;
+        width: 70%;
+        border-radius: 10px;
+    }
+}
+@media (max-width:1000px) {
+    .card-img{
+        height:275px;
+        margin-bottom:5%;
+        
+    }
+}
 
+@media (max-width:840px) {
+
+    
+    .aquifer-image {
+        height: 40%;
+        width: 70%;
+        margin: 10%;
+    }
+    .state-image{
+        height: 20%;
+        width: 70%;
+        border-radius: 10px;
+    }
 
 
 }
-@media ( max-width:760px){
+@media (max-width:760px) {
 
-    .card-img{
-        
-        height:200px;
-        width:100%;
+    .card-img {
+
+        height: 200px;
+        width: 100%;
     }
+}
+@media (max-width:660px) {
+
+    .aquifer-image {
+        height: 40%;
+        width: 70%;
+        margin: 10%;
+    }
+    
+    .state-image{
+        height:200px;
+        width:75%;
+    }
+   
+
+
+}
+
+@media (max-width:480px) {
+
+    .card-img {
+
+        height: 200px;
+        width: 100%;
+    }
+
+    .check-out {
+        color: white;
+        font-weight: bold;
+        font-size: 1.5rem;
+        line-height: 1.7;
+    }
+
+    .aquifer-image {
+        height: 20%;
+        width: 75%;
+        margin: 10%;
+    }
+    .state-image{
+        height: 200px;
+        width: 90%;
+        margin: 4%;
+        border-radius: 10px;
+    }
+
+
+
 }
